--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,11 @@
+<!doctype html>
+<html>
+<head>
+  <title>Flask Image Upload App</title>
+</head>
+<body>
+  <h1>Welcome to the Image Upload App</h1>
+  <p><a href="{{ url_for('upload_file') }}">Click here to upload an image</a></p>
+</body>
+</html>
 
